src/main/java/com/example/transactionprocessor/runtime/error/exception/InvalidInputError.java
package com.example.transactionprocessor.runtime.error.exception;

public class InvalidInputError extends Exception{
    public InvalidInputError(String message) {
        super(message);
    }
}
